PWA title change

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
   "scope": "/",
   "start_url": "/",
   "name": "Бобер",
-  "short_name": "bober",
+  "short_name": "Бобер",
   "description": "Расписание уроков и перемен!",
   "icons": [
        {
