--- a/package.json
+++ b/package.json
@@ -6,19 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "makemigrations": "drizzle-kit generate:pg",
+    "migrate": "ts-node ./src/db/migrate.ts"
   },
   "dependencies": {
     "@clerk/localizations": "^1.25.2",
     "@clerk/nextjs": "^4.23.5",
     "@clerk/themes": "^1.7.5",
     "@radix-ui/react-select": "^1.2.2",
+    "@t3-oss/env-core": "^0.6.1",
     "@types/node": "20.5.8",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.28.6",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "jotai": "^2.4.1",
@@ -26,11 +31,18 @@
     "next": "13.4.19",
     "next-pwa": "^5.6.0",
     "postcss": "8.4.29",
+    "postgres": "^3.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2"
-  }
+    "typescript": "5.2.2",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.19.13",
+    "ts-node": "^10.9.1"
+  },
+  "type": "module"
 }
