--- a/package.json
+++ b/package.json
@@ -8,40 +8,57 @@
     "start": "next start",
     "lint": "next lint",
     "makemigrations": "drizzle-kit generate:pg",
-    "migrate": "ts-node ./src/db/migrate.ts"
+    "migrate": "node -r esbuild-register src/db/migrate.ts"
   },
   "dependencies": {
-    "@clerk/localizations": "^1.25.2",
-    "@clerk/nextjs": "^4.23.5",
-    "@clerk/themes": "^1.7.5",
+    "@clerk/localizations": "^1.26.9",
+    "@clerk/nextjs": "^4.27.1",
+    "@clerk/themes": "^1.7.9",
+    "@formkit/auto-animate": "^0.8.1",
+    "@hookform/resolvers": "^3.3.1",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-core": "^0.6.1",
+    "@tanstack/react-query": "^5.8.1",
+    "@tanstack/react-query-devtools": "^5.8.1",
+    "@tanstack/react-query-next-experimental": "5.0.0-alpha.80",
     "@types/node": "20.5.8",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@uploadthing/react": "^5.7.0",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "14.0.2",
     "jotai": "^2.4.1",
     "lucide-react": "^0.274.0",
-    "next": "13.4.19",
+    "next": "14.0.2",
     "next-pwa": "^5.6.0",
     "postcss": "8.4.29",
     "postgres": "^3.3.5",
     "react": "18.2.0",
+    "react-confetti-explosion": "^2.1.2",
+    "react-day-picker": "^8.8.2",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
+    "react-hot-toast": "^2.4.1",
+    "superjson": "^1.13.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
-    "zod": "^3.22.2"
+    "uploadthing": "^5.7.4",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "drizzle-kit": "^0.19.13",
+    "esbuild-register": "^3.5.0",
     "ts-node": "^10.9.1"
   }
 }
